# mercury

./: .gitignore  ARCH.md  Cargo.toml  PHYSICS.md  README.md  config.toml
.github/workflows/: conformance.yml  synth.yml
crates/mercury-asm/: Cargo.toml
crates/mercury-asm/src/: lib.rs  main.rs
crates/mercury-ledger/: Cargo.toml
crates/mercury-ledger/src/: lib.rs
crates/mercury-sim/: Cargo.toml
crates/mercury-sim/src/: lib.rs  main.rs
crates/mercury-sim/tests/: conformance.rs
docs/paper/: SSRN_SUBMISSION.md  mercury.tex
hw/aws_f1/: README.md
hw/aws_f1/design/: cl_id_defines.vh  cl_mercury.sv  cl_mercury_defines.vh  ocl_slave.sv
hw/aws_f1/verif/tests/: Makefile  test_mercury.c
hw/rtl/: mercury_core.sv  mercury_mem.sv  mercury_pkg.sv  mercury_top.sv
hw/tb/: tb_cl_mercury.sv  tb_mercury.sv
infra/: README.md
infra/buildspec/: synth.yml
infra/terraform/: codebuild.tf  graviton_runner.tf  iam.tf  locals.tf  outputs.tf  s3.tf  variables.tf  versions.tf
programs/: countdown.msq  zero_b.msq
scripts/: build_paper.sh  cl_conformance.sh  conformance.sh
