[workspace]
resolver = "2"
members = [
    "crates/mercury-ledger",
    "crates/mercury-asm",
    "crates/mercury-sim",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Aldrich K. Wooden, Sr."]
license = "Apache-2.0"
repository = "https://github.com/khaaliswooden-max/mercury"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
toml = "0.8"
